Use `getFirst()`, `getLast()`, `removeFirst()` from `SequencedCollection`